[package]

name = "chunks"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-chunks.git"
description = "A library for dealing in chunky streams of data."
readme = "README.md"
license = "MIT"

[dependencies.syncbox]
git = "https://github.com/carllerche/syncbox"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.bytes]
git = "https://github.com/carllerche/bytes"

[dependencies]
rcmut = "*"

